@@ -75,6 +75,10 @@
 			<PackageName>maven</PackageName>
 		</Package>
 		<Package>
+			<GenericName>snappy</GenericName>
+			<PackageName>snappy</PackageName>
+		</Package>
+		<Package>
 			<GenericName>portaudio-development</GenericName>
 			<PackageName>portaudio</PackageName>
 		</Package>
