@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2009 - 2019, Phoronix Media
-	Copyright (C) 2009 - 2019, Michael Larabel
+	Copyright (C) 2009 - 2020, Phoronix Media
+	Copyright (C) 2009 - 2020, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -29,6 +29,7 @@ class sys_power extends phodevi_sensor
 	private static $battery_cur = false;
 	private static $tegra_power = false;
 	private static $wattsup_meter = false;
+	private static $wattsup_meter_raw = false;
 	private static $ipmitool = false;
 	private static $ipmitool_ps = false;
 	private static $ipmitool_dcmi = false;
@@ -63,6 +64,16 @@ class sys_power extends phodevi_sensor
 				self::$windows_battery = true;
 			}
 			return true;
+		}
+		if(($m = getenv('WATTSUP_METER')) != false && is_file($m))
+		{
+			$wattsup = self::watts_up_power_meter_raw($m);
+
+			if($wattsup > 0.5 && is_numeric($wattsup))
+			{
+				self::$wattsup_meter_raw = $m;
+				return true;
+			}
 		}
 		if(pts_client::executable_in_path('wattsup'))
 		{
@@ -143,6 +154,10 @@ class sys_power extends phodevi_sensor
 		{
 			return self::sys_power_current();
 		}
+		else if(self::$wattsup_meter_raw)
+		{
+			return self::watts_up_power_meter_raw(self::$wattsup_meter_raw);
+		}
 		else if(self::$wattsup_meter)
 		{
 			return self::watts_up_power_meter();
@@ -204,6 +219,33 @@ class sys_power extends phodevi_sensor
 		while(!is_numeric($value) && count($output) > 0);
 
 		return is_numeric($value) ? $value : -1;
+	}
+	private static function watts_up_power_meter_raw($meter)
+	{
+		$buffer = null;
+		$handle = @fopen($meter, 'r');
+		if($handle)
+		{
+			$times = 0;
+			while(($buffer = fgets($handle, 4096)) !== false)
+			{
+				$times++;
+				if($times == 4 || strpos($buffer, '#d') !== false)
+					break;
+			}
+			fclose($handle);
+		}
+		$watts = -1;
+		if(strpos($buffer, '#d') !== false)
+		{
+			$buffer = explode(',', $buffer);
+			if(isset($buffer[3]) && $buffer[3] > 10)
+			{
+				$watts = $buffer[3] / 10;
+			}
+		}
+
+		return $watts;
 	}
 	private static function sys_power_current()
 	{
