@@ -699,7 +699,7 @@ class pts_test_run_options
 			$error = 'Direct3D renderer is not supported here.';
 			return false;
 		}
-		if(stripos($test_args, 'Apple ') !== false && phodevi::os_under_test() != 'MacOSX')
+		if(strpos($test_args, 'Apple ') !== false && phodevi::os_under_test() != 'MacOSX')
 		{
 			// Only show Apple (namely Metal) renderer options when running on macOS
 			$error = 'Apple option is not supported here.';
